--- a/dashboard/static/css/input.css
+++ b/dashboard/static/css/input.css
@@ -1,3 +1,5 @@
 @import "tailwindcss" source(none);
-@plugin "./daisyui.js";
+@plugin "./daisyui.js" {
+    themes: night --default;
+}
 @source "../../templates";
